compiler/tests/fixtures/valid/inspection.viv
// Character inspection of an item

action read-note:
    roles:
        @reader:
            as: initiator
        @note:
            as: item
    effects:
        @reader inspect @note
