compiler/tests/fixtures/invalid/semantics/pool_self_reference.viv
// Invalid: role references itself in pool directive

action circular-pool:
    roles:
        @actor:
            as: initiator
        @item:
            as: item
            from: @item.contents
